2009-04-08  Andrey Belevantsev  <abel@ispras.ru>         * Merge the branch with trunk rev. 145662.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/alias-export@145752 138bc75d-0d04-0410-961f-82ee72b054a4