@@ -85,9 +85,7 @@ public class ServerSocket
    * This constructor is only used by java.nio.
    */
 
-  // FIXME: Workaround a bug in gcj.
-  //ServerSocket (PlainSocketImpl impl) throws IOException
-  ServerSocket(SocketImpl impl) throws IOException
+  ServerSocket(PlainSocketImpl impl) throws IOException
   {
     if (impl == null)
       throw new NullPointerException("impl may not be null");
@@ -101,8 +99,6 @@ public class ServerSocket
    * This method is only used by java.nio.
    */
 
-  // FIXME: Workaround a bug in gcj.
-  //PlainSocketImpl getImpl()
   SocketImpl getImpl()
   {
     return impl;
@@ -390,6 +386,7 @@ public class ServerSocket
 
     impl.accept(socket.impl);
     socket.bound = true;
+    socket.implCreated = true;
 
     SecurityManager sm = System.getSecurityManager();
     if (sm != null)
@@ -472,7 +469,7 @@ public class ServerSocket
     if (timeout < 0)
       throw new IllegalArgumentException("SO_TIMEOUT value must be >= 0");
 
-    impl.setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
+    impl.setOption(SocketOptions.SO_TIMEOUT, Integer.valueOf(timeout));
   }
 
   /**
@@ -559,7 +556,7 @@ public class ServerSocket
     if (size <= 0)
       throw new IllegalArgumentException("SO_RCVBUF value must be > 0");
 
-    impl.setOption(SocketOptions.SO_RCVBUF, new Integer(size));
+    impl.setOption(SocketOptions.SO_RCVBUF, Integer.valueOf(size));
   }
 
   /**
